finalizacao logica back - end

--- a/views/editarConta.mustache
+++ b/views/editarConta.mustache
@@ -34,7 +34,7 @@
   <section class="container-formulario">
     
     <form action="/colaboradores/editarConta" method="POST">
-      <h2 id="formtitle">Cadastrar</h2>
+      <h2 id="formtitle">Editar conta</h2>
       <div style="margin-bottom: 10px;">
         {{#colaborador}}
         <label for="nome">Nome:</label>
