--- a/public/stylesheets/criarPet.css
+++ b/public/stylesheets/criarPet.css
@@ -43,20 +43,6 @@ body {
     height: 80px;
 }
   
-header {
-    background-color: #8B4513;
-    color: #fff;
-    height: 80px;
-    border-bottom: #000000 solid 3px;
-}
-
-nav a {
-    display: inline;
-    margin-right: 10px;
-    color: #ffffff;
-    text-decoration: none;
-}
-
 section {
     text-align: center;
     margin: 20px;
@@ -111,6 +97,47 @@ section {
     width: 200px;
     font-size: 16px;
   
+}
+
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.div-links {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  
+  .div-links a:last-child {
+    width: auto;
+  }
+  
+  .div-links a {
+    margin-right: 70px;
+  }
+
+.img-logo {
+    background-size: contain;
+    width: 100px;
+    height: 80px;
+}
+  
+header {
+    background-color: #8B4513;
+    color: #fff;
+    height: 80px;
+    border-bottom: #000000 solid 3px;
+}
+
+nav a {
+    display: inline;
+    margin-right: 10px;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 footer {
