--- a/views/Agendamentos.mustache
+++ b/views/Agendamentos.mustache
@@ -32,7 +32,7 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-          <a id="btn-sair" href="/logout">Sair</a>
+            <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
@@ -74,17 +74,16 @@
 
 
   <footer>
-    <div id="div-footer">
-      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
-        target="_blank">@Petweb</a>
-      <span style="margin: 0 5px">|</span>
-      <a class="texto-end2-page" href="/sobre">Sobre</a>
-      <span style="margin: 0 5px">|</span>
-      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-      <span style="margin: 0 5px">|</span>
-      <a class="texto-end2-page" href="/contato">Contato</a>
-    </div>
-  </footer>
+    <div id="div-footer"> 
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/sobre">Sobre</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/contato">Contato</a>
+   </div>
+   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
