--- a/views/editarAgendamento.mustache
+++ b/views/editarAgendamento.mustache
@@ -39,30 +39,35 @@
       {{/agendamentos}}
       <label for="pet">Pet:</label>
       <select id="pet" name="pet" required>
+        {{#pet}}
+        <option value="{{nome}}">{{nome}}</option>
+        {{/pet}}
         {{#pets}}
         <option value="{{nome}}">{{nome}}</option>
         {{/pets}}
       </select>
+      {{#agendamentos}}
       <label for="tipoAgendamento">Tipo Agenda:</label>
-      <input type="text" id="tipoAgendamento" name="tipoAgendamento" required>
+      <input type="text" id="tipoAgendamento" name="tipoAgendamento"value="{{tipoAgendamento}}" required>
       <label for="data">Data:</label>
-      <input type="text" id="data" name="data" required>
-      <input type="submit" value="Cadastrar" class="btn-cadastrar">
+      <input type="text" id="data" name="data"value="{{data}}" required>
+      <input type="submit" value="Editar" class="btn-cadastrar">
+      {{/agendamentos}}
     </form>
   </section>
       
     
-      <footer>
-        <div id="div-footer"> 
-          <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/sobre">Sobre</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/contato">Contato</a>
-       </div>
-       </footer>
+  <footer>
+    <div id="div-footer"> 
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/sobre">Sobre</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/contato">Contato</a>
+   </div>
+   </footer>
     
 </body>
 </html>
