--- a/views/editarPet.mustache
+++ b/views/editarPet.mustache
@@ -30,19 +30,43 @@
     </nav>
   </header>
     
-
+  <section class="container-formulario">
     
-      <footer>
-        <div id="div-footer"> 
-          <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/sobre">Sobre</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/contato">Contato</a>
-       </div>
-       </footer>
+    <form action="/pets/editarPet" method="POST">
+      <h2 id="formtitle">Editar pet</h2>
+      <div style="margin-bottom: 10px;">
+        {{#pet}}
+        <label for="id">ID:</label>
+        <input type="text" id="id" name="id" value="{{_id}}" readonly>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome"  value="{{nome}}"required>
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" name="idade"  value="{{idade}}"required>
+        <label for="porte">Porte:</label>
+        <input type="text" id="porte" name="porte"  value="{{porte}}"required>
+        <label for="tipo">Tipo:</label>
+        <input type="text" id="tipo" name="tipo"  value="{{tipo}}"required>
+        <label for="peso">Peso:</label>
+        <input type="number" id="peso" name="peso"  value="{{peso}}"required>
+        <input type="hidden" name="nomeAntigo" value="{{nome}}">
+      {{/pet}}
+      <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
+    </form>
+
+    <button type="button" class="btn-excluir" onclick="excluirColaborador('{{_id}}')">Excluir</button>
+  </section>
+    
+  <footer>
+    <div id="div-footer"> 
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/sobre">Sobre</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+     <span style = "margin: 0 5px">|</span>
+     <a class="texto-end2-page" href="/contato">Contato</a>
+   </div>
+   </footer>
     
 </body>
 </html>
