--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -42,11 +42,7 @@
     </div>
     <div style="margin-bottom: 10px;">
       <label for="assunto">Senha:</label>
-      <input type="password" id="senha" name="senha" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="mensagem">Confirme sua senha:</label>
-      <input type="password" id="mensagem" name="mensagem" style="width: 100%;" required>
+      <input type="password" minlength="6" id="senha" name="senha" style="width: 100%;" required>
     </div>
     <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
   </form>
