--- a/public/stylesheets/agendamentos.css
+++ b/public/stylesheets/agendamentos.css
@@ -29,8 +29,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.8);
     z-index: -1;
+  }
+
+  .txt-tbl{
+    font-size: 50px;
+    margin-bottom: 80px;
+  }
+
+  #lista-agendamentos {
+    min-width: 1000px;
+    max-width: 1400px;
+    width: 100%;
+    margin-top: 80px;
   }
 
   .nav-container{
@@ -115,6 +127,14 @@ span{
     -ms-transform: scale(1.3);
     transform: scale(1.3);
 }
+
+
+section {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 .texto-end1-page{
     text-align: center;
