--- a/views/criarPet.mustache
+++ b/views/criarPet.mustache
@@ -38,11 +38,20 @@
       <label for="idade">Idade:</label>
       <input type="number" id="idade" name="idade" required>
       <label for="porte">Porte:</label>
-      <input type="text" id="porte" name="porte" required>
+      <select id="porte" name="porte" required>
+        <option value="Pequeno">Pequeno</option>
+        <option value="Medio">Medio</option>
+        <option value="Grande">Grande</option>
+      </select>
       <label for="tipo">Tipo:</label>
-      <input type="text" id="tipo" name="tipo" required>
+      <select id="tipo" name="tipo" required>
+        <option value="Silvestre">Silvestre</option>
+        <option value="Domestico">Domestico</option>
+      </select>
       <label for="peso">Peso:</label>
       <input type="number" id="peso" name="peso" required>
+      <label for="nomeCliente">Nome Cliente:</label>
+      <input type="text" id="nomeCliente" name="nomeCliente" required>
       <input type="submit" value="Cadastrar" class="btn-cadastrar">
     </form>
   </section>
