--- a/views/editarAgendamento.mustache
+++ b/views/editarAgendamento.mustache
@@ -48,9 +48,14 @@
       </select>
       {{#agendamentos}}
       <label for="tipoAgendamento">Tipo Agenda:</label>
-      <input type="text" id="tipoAgendamento" name="tipoAgendamento"value="{{tipoAgendamento}}" required>
+        <select id="tipoAgendamento" name="tipoAgendamento" required>
+          <option value="{{tipoAgendamento}}">{{tipoAgendamento}}</option>
+          <option value="Consulta">Consulta</option>
+          <option value="Tosa">Tosa</option>
+          <option value="Banho">Banho</option>
+        </select>
       <label for="data">Data:</label>
-      <input type="text" id="data" name="data"value="{{data}}" required>
+      <input type="date" id="data" name="data"value="{{data}}" required>
       <input type="submit" value="Editar" class="btn-cadastrar">
       {{/agendamentos}}
     </form>
