--- a/views/editarConta.mustache
+++ b/views/editarConta.mustache
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
+    <title>Conta</title>
     <link rel="stylesheet" href="/stylesheets/editarConta.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
