--- a/views/login.mustache
+++ b/views/login.mustache
@@ -21,7 +21,7 @@
         <h2 id="formtitle">Login</h2>
         <form action="/colaboradores/loginColaborador" method="POST">
           <label for="username">Email:</label>
-          <input type="text" id="email" name="email" >
+          <input type="email" id="email" name="email" >
           <br>
           <label for="password">Senha:</label>
           <input type="password" id="senha" name="senha" >
