--- a/public/stylesheets/pets.css
+++ b/public/stylesheets/pets.css
@@ -1,374 +1,161 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-image: url("../images/paw.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url("../images/paw.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-  #lista-pets {
-    max-width: 1200px;
-    width: 100%;
-    margin-top: 80px;
-  }
+#lista-pets {
+  min-width: 1000px;
+  max-width: 1400px;
+  width: 100%;
+  margin-top: 80px;
+}
 
-  .txt-tbl{
-    font-size: 50px;
-    margin-bottom: 80px;
-  }
-  
-  body::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-    z-index: -1;
-  }
+.txt-tbl {
+  font-size: 50px;
+  margin-bottom: 80px;
+}
 
-  .nav-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+body::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: -1;
+}
 
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .div-links {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-  }
-  
-  .div-links a:last-child {
-    width: auto;
-  }
-  
-  .div-links a {
-    margin-right: 70px;
-  }
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.div-links a:last-child {
+  width: auto;
+}
+
+.div-links a {
+  margin-right: 70px;
+}
 
 .img-logo {
-    background-size: contain;
-    width: 100px;
-    height: 80px;
+  background-size: contain;
+  width: 100px;
+  height: 80px;
 }
-  
+
 header {
-    background-color: #8B4513;
-    color: #fff;
-    height: 80px;
-    border-bottom: #000000 solid 3px;
+  background-color: #8B4513;
+  color: #fff;
+  height: 80px;
+  border-bottom: #000000 solid 3px;
 }
 
 nav a {
-    display: inline;
-    margin-right: 10px;
-    color: #ffffff;
-    text-decoration: none;
+  display: inline;
+  margin-right: 10px;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 footer {
-    height: 30px;
-    background-color: #8B4513;
-    color: #fff;
-    border-top: #000000 solid 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: auto;
+  height: 30px;
+  background-color: #8B4513;
+  color: #fff;
+  border-top: #000000 solid 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
 
-#div-footer{
-    display: flex;
-     flex-direction: row;
-     align-items: center;
-     justify-content: center; 
+#div-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; 
 }
 
-.texto-mid-page{
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: 'Poppins', sans-serif;
+.texto-mid-page {
+  text-align: center;
+  font-size: 16px;
+  border-radius: 5px;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 500ms ease; 
+  color: white;
+  text-decoration: none;
+  display: inline-block;
 }
 
-html {
-    height: 100%;
+span {
+  margin: 0 5px;
+  color: #000000;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-image: url("../images/paw.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  body::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
-    z-index: -1;
-  }
-
-  .nav-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+.texto-mid-page:hover {
+  color: rgb(0, 0, 0);
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
-.div-links {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-  }
-  
-  .div-links a:last-child {
-    width: auto;
-  }
-  
-  .div-links a {
-    margin-right: 70px;
-  }
-
-.img-logo {
-    background-size: contain;
-    width: 100px;
-    height: 80px;
-}
-  
-header {
-    background-color: #8B4513;
-    color: #fff;
-    height: 80px;
-    border-bottom: #000000 solid 3px;
+.texto-end1-page,
+.texto-end2-page {
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  border-radius: 5px;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 500ms ease; 
+  text-decoration: none;
+  display: inline-block;
 }
 
-nav a {
-    display: inline;
-    margin-right: 10px;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-footer {
-    height: 30px;
-    background-color: #8B4513;
-    color: #fff;
-    border-top: #000000 solid 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: auto;
-}
-
-#div-footer{
-    display: flex;
-     flex-direction: row;
-     align-items: center;
-     justify-content: center; 
-}
-
-.texto-mid-page{
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-span{
-    margin: 0 5px;
-    color: #000000;
-}
-
-.texto-mid-page:hover{
-    color: rgb(0, 0, 0);
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-}
-
-.texto-end1-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-.texto-end2-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-
-.texto-end2-page:hover{
-    color: rgb(0, 0, 0);
+.texto-end2-page:hover {
+  color: rgb(0, 0, 0);
 }
 
 #btn-sair {
-    background-color: red;
-    width: 80px;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-  }
-  
-  section {
-    text-align: center;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#formtitle{
-    margin-bottom: 20px;
-}
-
-.container-formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 60px;
-    background-color: #f2f2f2;
-    width: 300px;
-    border-radius: 10px;
-    border: #000000 solid 2px;
-    margin: 0 auto;
-    margin-top: 8%;
-  }
-  
-  
-.container-formulario h2 {
-    margin-top: 0;
-}
-
-.container-formulario label,
-.container-formulario input[type="text"],
-.container-formulario input[type="password"],
-.container-formulario input[type="submit"] {
-    display: block;
-    margin-bottom: 10px;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.container-formulario input,
-.container-formulario textarea{
-    border: #000000 solid 1px; 
-}
-
-.container-formulario input[type="submit"] {
-    background-color: #A0522D;  
-    color: #fff;
-    padding: 5px 10px;
-    cursor: pointer;
-    width: 200px;
-    font-size: 16px;
-  
-}
-span{
-    margin: 0 5px;
-    color: #000000;
-}
-
-.texto-mid-page:hover{
-    color: rgb(0, 0, 0);
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-}
-
-.texto-end1-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-.texto-end2-page{
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    text-decoration: none;
-    display: inline-block;
-}
-
-
-.texto-end2-page:hover{
-    color: rgb(0, 0, 0);
+  background-color: red;
+  width: 80px;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 5px;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 500ms ease; 
+  color: white;
+  text-decoration: none;
+  display: inline-block;
 }
 
 section {
@@ -379,46 +166,73 @@ section {
   align-items: center;
 }
 
-#btn-sair {
-    background-color: red;
-    width: 80px;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-  }
-  
-  .btn-excluir {
-    background-color: #8b0000;
-    color: white;
-    width: 80px;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 15px;
-  }
-  
-  .btn-editar {
-    width: 80px;
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 15px;
-  }
+.container-formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px;
+  background-color: #f2f2f2;
+  width: 300px;
+  border-radius: 10px;
+  border: #000000 solid 2px;
+  margin: 0 auto;
+  margin-top: 8%;
+}
 
-  .btn-extrair-pdf {
-    display: block;
-    margin: 0 auto;
-    background-color: #1d4ed5;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 15px;
-  }
+.container-formulario h2 {
+  margin-top: 0;
+}
+
+.container-formulario label,
+.container-formulario input[type="text"],
+.container-formulario input[type="password"],
+.container-formulario input[type="submit"] {
+  display: block;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-formulario input,
+.container-formulario textarea {
+  border: #000000 solid 1px; 
+}
+
+.container-formulario input[type="submit"] {
+  background-color: #A0522D;  
+  color: #fff;
+  padding: 5px 10px;
+  cursor: pointer;
+  width: 200px;
+  font-size: 16px;
+}
+
+.btn-excluir {
+  background-color: red;
+  color: white;
+  width: 40px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.btn-editar {
+  width: 40px;
+  background-color: #000000;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.btn-extrair-pdf {
+  display: block;
+  margin: 0 auto;
+  background-color: #1d4ed5;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 15px;
+}
