--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -28,25 +28,31 @@
     </nav>
   </header>
 
- <section class="container-formulario">
+  <section class="container-formulario">
+    <form action="/colaboradores/novoColaborador" method="POST">
+      <h2 id="formtitle">Cadastrar</h2>
+      <div style="margin-bottom: 10px;">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" style="width: 100%;" required>
+
+      </div>
+      <div style="margin-bottom: 10px;">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" style="width: 100%;" required>
+
+      </div>
+      <div style="margin-bottom: 10px;">
+        <label for="assunto">Senha:</label>
+        <input type="password" minlength="6" id="senha" name="senha" style="width: 100%;" required>
+
+      </div>
+      <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
+    </form>
+    {{#error}}
+      <div class="error-message">{{error}}</div>
+    {{/error}}
+  </section>
   
-  <form action="/colaboradores/novoColaborador" method="POST">
-    <h2 id="formtitle">Cadastrar</h2>
-    <div style="margin-bottom: 10px;">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="assunto">Senha:</label>
-      <input type="password" minlength="6" id="senha" name="senha" style="width: 100%;" required>
-    </div>
-    <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
-  </form>
-</section>
 
 
 <footer>
