--- a/views/editarPet.mustache
+++ b/views/editarPet.mustache
@@ -39,7 +39,7 @@
         <label for="id">ID:</label>
         <input type="text" id="id" name="id" value="{{_id}}" readonly>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome"  value="{{nome}}"required>
+        <input type="text" id="nome" name="nome" value="{{nome}}"required>
         <label for="idade">Idade:</label>
         <input type="number" id="idade" name="idade"  value="{{idade}}"required>
         <label for="porte">Porte:</label>
@@ -63,7 +63,9 @@
         {{/pet}}
       <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
     </form>
-
+    {{#error}}
+      <div class="error-message">{{error}}</div>
+    {{/error}}
     <button type="button" class="btn-excluir" onclick="excluirColaborador('{{_id}}')">Excluir</button>
   </section>
     
