finalizacao validacao joi

--- a/views/criarAgendamento.mustache
+++ b/views/criarAgendamento.mustache
@@ -49,6 +49,9 @@
       <input type="date" id="data" name="data" required>
       <input type="submit" value="Cadastrar" class="btn-cadastrar">
     </form>
+    {{#error}}
+    <div class="error-message">{{error}}</div>
+    {{/error}}
   </section>
     
   <footer>
