--- a/views/editarAgendamento.mustache
+++ b/views/editarAgendamento.mustache
@@ -59,6 +59,9 @@
       <input type="submit" value="Editar" class="btn-cadastrar">
       {{/agendamentos}}
     </form>
+    {{#error}}
+    <div class="error-message">{{error}}</div>
+    {{/error}}
   </section>
       
     
