--- a/views/criarConta.mustache
+++ b/views/criarConta.mustache
@@ -46,19 +46,20 @@
         <input type="password" minlength="6" id="senha" name="senha" style="width: 100%;" required>
 
       </div>
-      <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
+      <input type="submit" value="Enviar"
+        style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
     </form>
     {{#error}}
-      <div class="error-message">{{error}}</div>
+    <div class="error-message">{{error}}</div>
     {{/error}}
   </section>
-  
 
 
-<footer>
-  <div id="div-footer"> 
- </div>
- </footer>
+
+  <footer>
+    <div id="div-footer">
+    </div>
+  </footer>
 
 </body>
 
