--- a/views/contato.mustache
+++ b/views/contato.mustache
@@ -27,48 +27,50 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
 
- <section class="container-formulario">
-  
-  <form action="/email" method="POST">
-    <h2 id="formtitle">Entre em contato</h2>
-    <div style="margin-bottom: 10px;">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="assunto">Assunto:</label>
-      <input type="text" id="assunto" name="assunto" style="width: 100%;" required>
-    </div>
-    <div style="margin-bottom: 10px;">
-      <label for="mensagem">Mensagem ou Sugestão:</label>
-      <textarea id="mensagem" name="mensagem" style="width: 100%;" required></textarea>
-    </div>
-    <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
-  </form>
-</section>
+  <section class="container-formulario">
+
+    <form action="/email" method="POST">
+      <h2 id="formtitle">Entre em contato</h2>
+      <div style="margin-bottom: 10px;">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" style="width: 100%;" required>
+      </div>
+      <div style="margin-bottom: 10px;">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" style="width: 100%;" required>
+      </div>
+      <div style="margin-bottom: 10px;">
+        <label for="assunto">Assunto:</label>
+        <input type="text" id="assunto" name="assunto" style="width: 100%;" required>
+      </div>
+      <div style="margin-bottom: 10px;">
+        <label for="mensagem">Mensagem ou Sugestão:</label>
+        <textarea id="mensagem" name="mensagem" style="width: 100%;" required></textarea>
+      </div>
+      <input type="submit" value="Enviar"
+        style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
+    </form>
+  </section>
 
 
-<footer>
-  <div id="div-footer"> 
-    <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/sobre">Sobre</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-   <span style = "margin: 0 5px">|</span>
-   <a class="texto-end2-page" href="/contato">Contato</a>
- </div>
- </footer>
+  <footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
 
 </body>
 
