--- a/views/criarPet.mustache
+++ b/views/criarPet.mustache
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
-    <link rel="stylesheet" href="/stylesheets/criarPet.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
+  <link rel="stylesheet" href="/stylesheets/criarPet.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+</style>
 
 <body>
 
@@ -24,12 +25,12 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
-    
+
   <section class="container-formulario">
     <h2 id="formtitle">Inserir Pet</h2>
     <form action="/pets/" method="POST">
@@ -58,18 +59,20 @@
     <div class="error-message">{{error}}</div>
     {{/error}}
   </section>
-    
+
   <footer>
-    <div id="div-footer"> 
-      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/sobre">Sobre</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/contato">Contato</a>
-   </div>
-   </footer>
-    
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
+
 </body>
+
 </html>
