--- a/views/editarConta.mustache
+++ b/views/editarConta.mustache
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
-    <title>Conta</title>
-    <link rel="stylesheet" href="/stylesheets/editarConta.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
 
-  <script src="../javascripts/colaboradorFunctions.js"></script>  
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-  </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
+  <title>Conta</title>
+  <link rel="stylesheet" href="/stylesheets/editarConta.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<script src="../javascripts/colaboradorFunctions.js"></script>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+</style>
 
 <body>
 
@@ -26,14 +27,14 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
-    
+
   <section class="container-formulario">
-    
+
     <form action="/colaboradores/editarConta" method="POST">
       <h2 id="formtitle">Editar conta</h2>
       <div style="margin-bottom: 10px;">
@@ -47,28 +48,31 @@
       </div>
       <div style="margin-bottom: 10px;">
         <label for="assunto">Senha:</label>
-        <input type="password"minlength="6" id="senha" name="senha" value="{{senha}}" style="width: 100%;" required>
+        <input type="password" minlength="6" id="senha" name="senha" value="{{senha}}" style="width: 100%;" required>
       </div>
       {{/colaborador}}
-      <input type="submit" value="Enviar" style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
+      <input type="submit" value="Enviar"
+        style="width: 100%; background-color: #A0522D; color: #fff; padding: 10px;  border-radius: 20px;">
     </form>
     {{#error}}
-      <div class="error-message">{{error}}</div>
+    <div class="error-message">{{error}}</div>
     {{/error}}
     <button type="button" class="btn-excluir" onclick="excluirColaborador('{{_id}}')">Excluir</button>
   </section>
-    
-      <footer>
-        <div id="div-footer"> 
-          <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/sobre">Sobre</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-         <span style = "margin: 0 5px">|</span>
-         <a class="texto-end2-page" href="/contato">Contato</a>
-       </div>
-       </footer>
-    
+
+  <footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
+
 </body>
+
 </html>
