--- a/views/sobre.mustache
+++ b/views/sobre.mustache
@@ -27,7 +27,7 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
@@ -35,25 +35,28 @@
 
   <section class="container">
     <div class="div-container">
-        <img id="img-sobre" src="../images/logo-header.png" alt="">
-        <p>
-          Petweb é um site que possibilita aos colaboradores da clínica veterinária realizarem o gerenciamento de seus clientes e respectivos pets no que diz respeito
-          ao agendamento de visitas a clínica, seja para realizar uma consulta, ou até mesmo dar um banho ou tosa em seu bichinho!
-        </p>
+      <img id="img-sobre" src="../images/logo-header.png" alt="">
+      <p>
+        Petweb é um site que possibilita aos colaboradores da clínica veterinária realizarem o gerenciamento de seus
+        clientes e respectivos pets no que diz respeito
+        ao agendamento de visitas a clínica, seja para realizar uma consulta, ou até mesmo dar um banho ou tosa em seu
+        bichinho!
+      </p>
     </div>
   </section>
 
   <footer>
-    <div id="div-footer"> 
-      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/sobre">Sobre</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-     <span style = "margin: 0 5px">|</span>
-     <a class="texto-end2-page" href="/contato">Contato</a>
-   </div>
-   </footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
 
 </body>
 
