--- a/views/tecnologias.mustache
+++ b/views/tecnologias.mustache
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@
 </style>
 
 <body>
-  
+
   <header>
     <nav>
       <div class="nav-container">
@@ -26,81 +27,88 @@
           <a class="texto-mid-page" href="/agendamentos/agendamentos">Agendamentos</a>
           <a class="texto-mid-page" href="/pets/pets">Pets</a>
           <a class="texto-mid-page" href="/colaboradores/telaEditar">Perfil</a>
-            <a id="btn-sair" href="/logout">Sair</a>
+          <a id="btn-sair" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
   </header>
 
-    <section class="container">
-      <div class="divTec">
-        <img class="imgTec" src="../images/node.png" alt="...">
-        <p>
-          Node.js é um ambiente de execução de JavaScript que permite desenvolver aplicativos do lado do servidor. Seu
-          principal objetivo é possibilitar a construção de servidores eficientes e escaláveis, utilizando uma única linguagem
-          de programação em toda a aplicação.
-        </p>
-      </div>
-      <div class="divTec">
-        <img id= "imgMustache" class="imgTec" src="../images/mustache.png" alt="...">
-        <p>
-          Mustache é uma view engine que permite a separação clara entre lógica e apresentação em aplicativos web. 
-          Ele utiliza um modelo simples de substituição de tags para renderizar dinamicamente os dados em templates HTML.
-        </p>
-      </div>
-      <div class="divTec">
-        <img class="imgTec" src="../images/express.png" alt="...">
-        <p>
-          Express.js é um framework web para Node.js que simplifica o desenvolvimento de aplicativos web.
-        </p>
-      </div>
-      
-      <div class="divTec">
-        <img class="imgTec" src="../images/mongodb.png" alt="...">
-        <p>
-          MongoDB é um banco de dados NoSQL de alto desempenho e orientado a documentos, que oferece escalabilidade e flexibilidade para armazenar e gerenciar dados.
-        </p>
-      </div>
-      <div class="divTec">
-        <img class="imgTec" src="../images/nodemon.png" alt="...">
-        <p>
-          Nodemon é uma ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que ocorrem alterações no código, 
-          permitindo um fluxo de desenvolvimento mais eficiente.
-        </p>
-      </div>
-      <div class="divTec">
-        <img class="imgTec" src="../images/javascript.png" alt="...">
-        <p>
-          Linguagem de programação para tornar páginas web interativas e desenvolver aplicativos do cliente e do servidor.
-        </p>
-      </div>
-      <div class="divTec">
-        <img class="imgTec" src="../images/css.png" alt="...">
-        <p>
-          CSS é a linguagem de estilo usada para estilizar páginas web, permitindo definir a aparência dos elementos HTML. Com
-          o CSS, é possível controlar cores, fontes, espaçamento e outros atributos visuais, criando páginas web visualmente
-          atraentes e personalizadas.
-        </p>
-      </div>
-      <div class="divTec">
-        <img class="imgTec" src="../images/github.png" alt="...">
-        <p>
-          Plataforma de hospedagem de código para controle de versão e colaboração em projetos de software.
-        </p>
-      </div>
-    </section>
+  <section class="container">
+    <div class="divTec">
+      <img class="imgTec" src="../images/node.png" alt="...">
+      <p>
+        Node.js é um ambiente de execução de JavaScript que permite desenvolver aplicativos do lado do servidor. Seu
+        principal objetivo é possibilitar a construção de servidores eficientes e escaláveis, utilizando uma única
+        linguagem
+        de programação em toda a aplicação.
+      </p>
+    </div>
+    <div class="divTec">
+      <img id="imgMustache" class="imgTec" src="../images/mustache.png" alt="...">
+      <p>
+        Mustache é uma view engine que permite a separação clara entre lógica e apresentação em aplicativos web.
+        Ele utiliza um modelo simples de substituição de tags para renderizar dinamicamente os dados em templates HTML.
+      </p>
+    </div>
+    <div class="divTec">
+      <img class="imgTec" src="../images/express.png" alt="...">
+      <p>
+        Express.js é um framework web para Node.js que simplifica o desenvolvimento de aplicativos web.
+      </p>
+    </div>
 
-    <footer>
-      <div id="div-footer"> 
-        <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/" target="_blank">@Petweb</a>
-       <span style = "margin: 0 5px">|</span>
-       <a class="texto-end2-page" href="/sobre">Sobre</a>
-       <span style = "margin: 0 5px">|</span>
-       <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
-       <span style = "margin: 0 5px">|</span>
-       <a class="texto-end2-page" href="/contato">Contato</a>
-     </div>
-     </footer>
-      
+    <div class="divTec">
+      <img class="imgTec" src="../images/mongodb.png" alt="...">
+      <p>
+        MongoDB é um banco de dados NoSQL de alto desempenho e orientado a documentos, que oferece escalabilidade e
+        flexibilidade para armazenar e gerenciar dados.
+      </p>
+    </div>
+    <div class="divTec">
+      <img class="imgTec" src="../images/nodemon.png" alt="...">
+      <p>
+        Nodemon é uma ferramenta de desenvolvimento para Node.js que reinicia automaticamente o servidor sempre que
+        ocorrem alterações no código,
+        permitindo um fluxo de desenvolvimento mais eficiente.
+      </p>
+    </div>
+    <div class="divTec">
+      <img class="imgTec" src="../images/javascript.png" alt="...">
+      <p>
+        Linguagem de programação para tornar páginas web interativas e desenvolver aplicativos do cliente e do servidor.
+      </p>
+    </div>
+    <div class="divTec">
+      <img class="imgTec" src="../images/css.png" alt="...">
+      <p>
+        CSS é a linguagem de estilo usada para estilizar páginas web, permitindo definir a aparência dos elementos HTML.
+        Com
+        o CSS, é possível controlar cores, fontes, espaçamento e outros atributos visuais, criando páginas web
+        visualmente
+        atraentes e personalizadas.
+      </p>
+    </div>
+    <div class="divTec">
+      <img class="imgTec" src="../images/github.png" alt="...">
+      <p>
+        Plataforma de hospedagem de código para controle de versão e colaboração em projetos de software.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    <div id="div-footer">
+      <a class="texto-end1-page" href="https://www.linkedin.com/in/ramon-crivelari-batista-b73392234/"
+        target="_blank">@Petweb</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/sobre">Sobre</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/tecnologias">Tecnologias</a>
+      <span style="margin: 0 5px">|</span>
+      <a class="texto-end2-page" href="/contato">Contato</a>
+    </div>
+  </footer>
+
 </body>
+
 </html>
