--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -32,13 +32,15 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px;
+    padding: 20px;
     background-color: #f2f2f2;
     width: 300px;
     border-radius: 10px;
     border: #000000 solid 2px;
     margin: 0 auto;
-    margin-top: 8%;
+    margin-top: 2%;
+   
+    margin-bottom: 2%;
 }
 
 
