--- a/public/stylesheets/criarAgendamento.css
+++ b/public/stylesheets/criarAgendamento.css
@@ -10,10 +10,15 @@ html {
 }
 
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    background-color: #F1DEC9
+    height: 100vh;
+    background-image: url("../images/paw.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 section {
@@ -32,13 +37,13 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px;
+    padding: 40px;
     background-color: #f2f2f2;
-    width: 300px;
+    width: 200px;
     border-radius: 10px;
     border: #000000 solid 2px;
     margin: 0 auto;
-    margin-top: 8%;
+    margin-top: 3%;
 }
 
 
@@ -196,4 +201,8 @@ span {
     color: white;
     text-decoration: none;
     display: inline-block;
+}
+
+.btn-cadastrar{
+    margin-top: 15px;
 }
