--- a/public/stylesheets/criarPet.css
+++ b/public/stylesheets/criarPet.css
@@ -10,37 +10,15 @@ html {
 }
 
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    background-color: #F1DEC9
-}
-
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.div-links {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-}
-
-.div-links a:last-child {
-    width: auto;
-}
-
-.div-links a {
-    margin-right: 70px;
-}
-
-.img-logo {
-    background-size: contain;
-    width: 100px;
-    height: 80px;
+    height: 100vh;
+    background-image: url("../images/paw.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 section {
@@ -59,13 +37,14 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px;
+    padding: 30px;
     background-color: #f2f2f2;
     width: 300px;
     border-radius: 10px;
     border: #000000 solid 2px;
     margin: 0 auto;
-    margin-top: 8%;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 
@@ -223,4 +202,8 @@ span {
     color: white;
     text-decoration: none;
     display: inline-block;
+}
+
+.btn-cadastrar{
+    margin-top: 15px;
 }
