--- a/public/stylesheets/editarAgendamento.css
+++ b/public/stylesheets/editarAgendamento.css
@@ -14,25 +14,69 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
     background-image: url("../images/paw.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-body::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
-    z-index: -1;
+section {
+    text-align: center;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+#formtitle {
+    margin-bottom: 20px;
+}
+
+.container-formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    background-color: #f2f2f2;
+    width: 300px;
+    border-radius: 10px;
+    border: #000000 solid 2px;
+    margin: 0 auto;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+
+.container-formulario h2 {
+    margin-top: 0;
+}
+
+.container-formulario label,
+.container-formulario input[type="text"],
+.container-formulario input[type="password"],
+.container-formulario input[type="submit"] {
+    display: block;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.container-formulario input,
+.container-formulario textarea {
+    border: #000000 solid 1px;
+}
+
+.container-formulario input[type="submit"] {
+    background-color: #A0522D;
+    color: #fff;
+    padding: 5px 10px;
+    cursor: pointer;
+    width: 200px;
+    font-size: 16px;
+
+}
 
 .nav-container {
     display: flex;
@@ -160,58 +204,6 @@ span {
     display: inline-block;
 }
 
-section {
-    text-align: center;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#formtitle {
-    margin-bottom: 20px;
-}
-
-.container-formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 60px;
-    background-color: #f2f2f2;
-    width: 300px;
-    border-radius: 10px;
-    border: #000000 solid 2px;
-    margin: 0 auto;
-    margin-top: 5%;
-}
-
-
-.container-formulario h2 {
-    margin-top: 0;
-}
-
-.container-formulario label,
-.container-formulario input[type="text"],
-.container-formulario input[type="password"],
-.container-formulario input[type="submit"] {
-    display: block;
-    margin-bottom: 10px;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.container-formulario input,
-.container-formulario textarea {
-    border: #000000 solid 1px;
-}
-
-.container-formulario input[type="submit"] {
-    background-color: #A0522D;
-    color: #fff;
-    padding: 5px 10px;
-    cursor: pointer;
-    width: 200px;
-    font-size: 16px;
-
+.btn-cadastrar{
+    margin-top: 15px;
 }
