--- a/public/stylesheets/pets.css
+++ b/public/stylesheets/pets.css
@@ -14,23 +14,44 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   background-image: url("../images/paw.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#lista-pets {
-  min-width: 1000px;
-  max-width: 1400px;
-  width: 100%;
-  margin-top: 80px;
+section {
+  text-align: center;
 }
 
 .txt-tbl {
-  font-size: 50px;
-  margin-bottom: 80px;
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+.table{
+  font-size: 14px;
+  width: 80%;
+}
+
+#lista-pets{
+  width: 80%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 10px;
+}
+
+#lista-pets::-webkit-scrollbar {
+  width: 0; 
+}
+
+#lista-pets::-webkit-scrollbar-thumb {
+  background-color: transparent; 
+}
+
+#lista-pets::-webkit-scrollbar-track {
+  background-color: transparent; 
 }
 
 body::after {
@@ -156,55 +177,6 @@ span {
   color: white;
   text-decoration: none;
   display: inline-block;
-}
-
-section {
-  text-align: center;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container-formulario {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 60px;
-  background-color: #f2f2f2;
-  width: 300px;
-  border-radius: 10px;
-  border: #000000 solid 2px;
-  margin: 0 auto;
-  margin-top: 8%;
-}
-
-.container-formulario h2 {
-  margin-top: 0;
-}
-
-.container-formulario label,
-.container-formulario input[type="text"],
-.container-formulario input[type="password"],
-.container-formulario input[type="submit"] {
-  display: block;
-  margin-bottom: 10px;
-  align-items: center;
-  justify-content: center;
-}
-
-.container-formulario input,
-.container-formulario textarea {
-  border: #000000 solid 1px;
-}
-
-.container-formulario input[type="submit"] {
-  background-color: #A0522D;
-  color: #fff;
-  padding: 5px 10px;
-  cursor: pointer;
-  width: 200px;
-  font-size: 16px;
 }
 
 .btn-excluir {
