--- a/views/criarAgendamento.mustache
+++ b/views/criarAgendamento.mustache
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro</title>
   <link rel="icon" href="/images/logo-header2.png" type="image/x-icon">
   <link rel="stylesheet" href="/stylesheets/criarAgendamento.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
